test/files/run/t1406b.check
newSource1.scala:4: error: illegal character '\ud801' missing low surrogate
  def ? = x
      ^
newSource1.scala:5: error: illegal character '\udc00'
  def ? = y
      ^
